# Muleguard

./: .gitignore  GNN_IMPROVEMENT_PLAN.md  HYBRID_TEACHER_FINDINGS.md  HYBRID_TEACHER_PLAN.md  README.md  demo_runner.py  muleguard_config.csv  muleguard_core_transactions.csv  muleguard_digital_telemetry.csv  muleguard_entity_map_full.csv  muleguard_node_features_full.csv  pyproject.toml  requirements-lock.txt  requirements.txt  ~$SHBOARD_CONTENT_DRAFT.docx
data/amlsim_1k/: muleguard_core_transactions.csv  muleguard_digital_telemetry.csv  muleguard_entity_map_full.csv  muleguard_node_features_full.csv
data/scenarios/betting_crypto/: muleguard_core_transactions.csv  muleguard_digital_telemetry.csv  muleguard_entity_map_full.csv  muleguard_node_features_full.csv
data/scenarios/digital_arrest/: muleguard_core_transactions.csv  (+3 more)
docs/: index.html
muleGuard_ai/: __init__.py  alerts.py  analyst.py  build_features.py  config.py  convert_amlsim.py  csv_io.py  decisioning.py  evaluate.py  feature_quality.py  features.py  federation.py  gnn_inference.py  gnn_model.py  governance.py  graph_dataset.py  graph_store.py  identity_graph.py  integrations.py  ml_scoring.py  models.py  operational.py  orchestrator.py  prepare_amlsim.py  pyg_adapter.py  reporting.py  risk_baseline.py  tabular_teacher.py  train_baseline_model.py  train_gnn.py  tune_gnn.py
tests/: test_amlsim.py  test_core.py  test_feature_engineering.py  test_gnn_smoke.py  test_model_quality.py  test_operational.py  test_scenarios.py  test_tabular_teacher.py  test_train_baseline_model.py  test_tune_gnn.py
(+8 files in other folders)
